--- a/TQPGSS_HFT_2023241.Logic/TQPGSS_HFT_2023241.Logic.csproj
+++ b/TQPGSS_HFT_2023241.Logic/TQPGSS_HFT_2023241.Logic.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TQPGSS_HFT_2023241.Models\TQPGSS_HFT_2023241.Models.csproj" />
+    <ProjectReference Include="..\TQPGSS_HFT_2023241.Repository\TQPGSS_HFT_2023241.Repository.csproj" />
   </ItemGroup>
 
 </Project>
