--- a/TQPGSS_HFT_2023241.Client/TQPGSS_HFT_2023241.Client.csproj
+++ b/TQPGSS_HFT_2023241.Client/TQPGSS_HFT_2023241.Client.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TQPGSS_HFT_2023241.Models\TQPGSS_HFT_2023241.Models.csproj" />
+    <ProjectReference Include="..\TQPGSS_HFT_2023241.Repository\TQPGSS_HFT_2023241.Repository.csproj" />
   </ItemGroup>
 
 </Project>
