--- a/TQPGSS_HFT_2023241.Repository/TQPGSS_HFT_2023241.Repository.csproj
+++ b/TQPGSS_HFT_2023241.Repository/TQPGSS_HFT_2023241.Repository.csproj
@@ -5,7 +5,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TQPGSS_HFT_2023241.Models\TQPGSS_HFT_2023241.Models.csproj" />
+    <None Remove="F1Database.mdf" />
+    <None Remove="F1Database_log.ldf" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="F1Database.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="F1Database_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TQPGSS_HFT_2023241.Models\TQPGSS_HFT_2023241.Models.csproj" />
+  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="EntityFramework" Version="6.4.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.3" />
+	</ItemGroup>
 </Project>
