--- a/TQPGSS_HFT_2023241.Endpoint/TQPGSS_HFT_2023241.Endpoint.csproj
+++ b/TQPGSS_HFT_2023241.Endpoint/TQPGSS_HFT_2023241.Endpoint.csproj
@@ -1,22 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
-    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
-    <PackageReference Include="coverlet.collector" Version="3.1.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TQPGSS_HFT_2023241.Logic\TQPGSS_HFT_2023241.Logic.csproj" />
-    <ProjectReference Include="..\TQPGSS_HFT_2023241.Models\TQPGSS_HFT_2023241.Models.csproj" />
-    <ProjectReference Include="..\TQPGSS_HFT_2023241.Repository\TQPGSS_HFT_2023241.Repository.csproj" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
