--- a/TQPGSS_HFT_2023241.Endpoint/TQPGSS_HFT_2023241.Endpoint.csproj
+++ b/TQPGSS_HFT_2023241.Endpoint/TQPGSS_HFT_2023241.Endpoint.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -9,7 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\TQPGSS_HFT_2023241.Logic\TQPGSS_HFT_2023241.Logic.csproj" />
+    <ProjectReference Include="..\TQPGSS_HFT_2023241.Models\TQPGSS_HFT_2023241.Models.csproj" />
+    <ProjectReference Include="..\TQPGSS_HFT_2023241.Repository\TQPGSS_HFT_2023241.Repository.csproj" />
   </ItemGroup>
 
 </Project>
