--- a/TQPGSS_HFT_2023241.Client/TQPGSS_HFT_2023241.Client.csproj
+++ b/TQPGSS_HFT_2023241.Client/TQPGSS_HFT_2023241.Client.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleMenu-simple" Version="2.4.2" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TQPGSS_HFT_2023241.Logic\TQPGSS_HFT_2023241.Logic.csproj" />
     <ProjectReference Include="..\TQPGSS_HFT_2023241.Models\TQPGSS_HFT_2023241.Models.csproj" />
     <ProjectReference Include="..\TQPGSS_HFT_2023241.Repository\TQPGSS_HFT_2023241.Repository.csproj" />
