--- a/TQPGSS_HFT_2023241.Wpfclient/TQPGSS_HFT_2023241.Wpfclient.csproj
+++ b/TQPGSS_HFT_2023241.Wpfclient/TQPGSS_HFT_2023241.Wpfclient.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.2" />
 		<PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
